--- a/index.html
+++ b/index.html
@@ -69,7 +69,16 @@
     <!-- DNS 预解析 -->
     <link rel="dns-prefetch" href="//www.12036.com" />
     <link rel="preconnect" href="https://www.12036.com:8095" crossorigin />
-    
+    <!-- Clarity tracking code for https://railway.zyhorg.cn/ -->
+    <script>
+        (function(c,l,a,r,i,t,y){
+            c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
+            t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i+"?ref=bwt";
+            y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
+        })(window, document, "clarity", "script", "uhphcsdo00");
+    </script>
+    <script charset="UTF-8" id="LA_COLLECT" src="//sdk.51.la/js-sdk-pro.min.js"></script>
+    <script>LA.init({id:"L1tawgUcOOxIgjmU",ck:"L1tawgUcOOxIgjmU",autoTrack:true,hashMode:true,screenRecord:true})</script>
     <!-- 结构化数据 -->
     <script type="application/ld+json">
     {
